--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,18 @@
 #wrapper {
+  width: 960px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
   color: black;
-  background: url("../images/SoundOfMusic.jpg") no-repeat fixed;
+  /* background: url("../images/SoundOfMusic.jpg") no-repeat fixed; */
   min-height: 100vh;
   background-size: cover;
 }
 
-#buttons-appear-here {
-  margin-left: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#new-animals {
-  margin-left: 0;
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-#standard-buttons {
-  margin-left: 0;
-  margin-top: 0px;
-  margin-bottom: 10px;
+table,
+th,
+td {
+  border: 1px solid black;
 }
 
 img {
@@ -31,66 +20,26 @@ img {
   max-height: 100%;
 }
 
-.button{
-  display: flex;
+#trainSchedule {
+  width: 960px;
+  height: 100px;
+  position: absolute;
+  top: 100px;
+  left: 10px;
 }
 
-.button > button{
-  display: inline-block;
-}
+#trainAdmin {
 
-.margin-left{
-  margin-left: 0px;
-}
+  position: absolute;
+  top: 400px;
+  left: 10px;
 
-.margin-right{
-  margin-left: 5px;
-}
-
-.margin-top{
-  margin-top: 5px;
-}
-
-#standard-buttons {
-  margin: 5px;
-}
-
-.gifCard {
-  width: 300px;
-  text-align: center;
-}
-
-.gifImage {
-  height: 250px;
-  width: 250px;
-  margin: 0 auto;
-  border-radius: 5px;
-}
-
-.favCard {
-  width: 600px;
-  text-align: center;
-}
-
-.favImage {
-  height: 550px;
-  width: 550px;
-  margin: 0 auto;
-  border-radius: 5px;
-}
-
-.overlay {
-  background-color: rgba(255,255,255,.5);
-  margin: 5% 0;
-  border-radius: 5px;
-  padding: 2%;
 }
 
 /* Add a gray background color and some padding to the footer */
 footer {
   text-align: center;
-  color:white;
+  color: white;
   background: #666666;
   padding: 25px;
 }
-
