--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -12,6 +12,11 @@ body {
     width: 400px;
 }
 
+.signin {
+    margin-right: 20px;
+    padding-right: 20px;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
